# algolia-github-graphql

./: .env.example  README.md  pyproject.toml
export/: export-graphql.json
github_graphql/: __init__.py
